@@ -33,13 +33,13 @@ extern "C"
 #undef BTREE_DEBUG
 
 typedef boost::adjacency_list<boost::vecS, boost::vecS, boost::bidirectionalS, std::pair<std::set<symbol *>, int> > btree_t;
-#ifdef HAVE_STX_BTREE_MAP_H
-typedef std::btree_map<int, btree_t::vertex_descriptor> bmap_t;
-typedef std::btree_map<btree_t::vertex_descriptor, int> bmaprev_t;
-#else
+/*#ifdef HAVE_STX_BTREE_MAP_H TODO: MAKE THIS WORK!
+typedef stx::btree_map<int, btree_t::vertex_descriptor> bmap_t;
+typedef stx::btree_map<btree_t::vertex_descriptor, int> bmaprev_t;
+#else*/
 typedef std::map<int, btree_t::vertex_descriptor> bmap_t;
 typedef std::map<btree_t::vertex_descriptor, int> bmaprev_t;
-#endif
+//#endif
 
 static btree_t btree;
 static bmap_t bmap;
